// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";


package pusModelEditorMessages.protobuf;

message Pus011TimeShift {
extensions 5 to 105;

  optional ccsds_mal.protobuf.STRING applicationTime = 1;
  optional ccsds_mal.protobuf.INTEGER timeShiftOffset = 2;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateMode = 3;
  optional ccsds_mal.protobuf.STRING lastUpdateTime = 4;
}
